--- a/src/app/components/post/post-list/post-list.component.html
+++ b/src/app/components/post/post-list/post-list.component.html
@@ -147,8 +147,8 @@
                 <div *ngFor="let post of posts" class="card mb-2" style="width: 100%">
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                            <img src="assets/imageFolderOfProject/{{post.imageFolderName}}/image1.png" class="card-img"
-                                alt="..." height="130px">
+                            <img  src="assets/imageFolderOfProject/{{post.imageFolderName}}/image1.png" class="card-img"
+                                alt="..." height="130px" routerLink="/detailpost/{{post.id}}">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body h-100 d-flex flex-column justify-content-between py-2">
@@ -167,11 +167,6 @@
                                             style="font-size: 20px;"></i>{{post.region.regionName}}
                                     </small>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col" *ngIf="posts?.length > 0">
-                                <pagination-controls (pageChange)="p=$event " class="float-right"></pagination-controls>
                             </div>
                         </div>
                     </div>
