Upadate Json Web token Login

--- a/src/app/components/post/post-add/post-add.component.html
+++ b/src/app/components/post/post-add/post-add.component.html
@@ -13,25 +13,25 @@
                 <div class="form-group row">
                     <label class="col col-sm-2">Họ và tên: </label>
                     <div class="col">
-                        <span> Nguyễn Văn A</span>
+                        <span>{{userDetails.fullName}}</span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col col-sm-2">Email: </label>
                     <div class="col">
-                        <span> nguyenvanhu@gmail.com</span>
+                        <span>{{userDetails.email}}</span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col col-sm-2">Địa chỉ: </label>
                     <div class="col">
-                        <span> hà Nội</span>
+                        <span>{{userDetails.address}}</span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col col-sm-2">Số điện thoại: </label>
                     <div class="col">
-                        <span> 0123456678</span>
+                        <span> {{userDetails.phoneNumber}}</span>
                     </div>
                 </div>
             </div>
