--- a/src/app/components/post/post-list/post-list.component.html
+++ b/src/app/components/post/post-list/post-list.component.html
@@ -2,8 +2,9 @@
 <div class="container-fluid bg-warning d-flex justify-content-center" style="position: fixed; top: 0px;z-index: 200;">
     <div class="row px-3" style="height:45px;width: 1000px; max-width: 1000px;">
         <div class="col-3 d-flex align-items-center">
-            <img (click)=backToListPost() src="https://static.chotot.com/storage/marketplace/nha_white_logo.png"
-                style="height: 30px;">
+            <!-- <img (click)=backToListPost() src="https://static.chotot.com/storage/marketplace/nha_white_logo.png"
+                style="height: 30px;"> -->
+            <img class="pb-1" (click)=backToListPost() src="/assets/img/logoCodegym.png" style="height: 50px;">
         </div>
         <div class="col-9 d-flex justify-content-end">
             <div class="h-100 d-flex align-items-center mr-3">
@@ -148,7 +149,7 @@
                     style="width: 100%">
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                            <img  src="assets/imageFolderOfProject/{{post.imageFolderName}}/image1.png" class="card-img"
+                            <img src="assets/imageFolderOfProject/{{post.imageFolderName}}/image1.png" class="card-img"
                                 alt="..." height="130px" routerLink="/detailpost/{{post.id}}">
                         </div>
                         <div class="col-md-8">
