--- a/src/app/components/admin/admin-user-detail/admin-user-detail.component.html
+++ b/src/app/components/admin/admin-user-detail/admin-user-detail.component.html
@@ -1,1 +1,77 @@
-<p>admin-user-detail works!</p>
+<div class="container">
+    <div class="row">
+        <i class="fas fa-users-cog text-dark mr-2" style="font-size: 30px;"></i>
+        <h3>Thông tin thành viên</h3>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-4">
+            <img src="/assets/img/logoUserDemo.png" class="img-thumbnail" alt="Cinque Terre">
+        </div>
+        <div class="col-8 px-5">
+            <table class="table table-striped table-sm">
+                <tbody>
+                    <tr>
+                        <td>Họ và tên: </td>
+                        <td>{{user.fullName}}</td>
+                    </tr>
+                    <tr>
+                        <td>Địa chỉ:</td>
+                        <td>{{user.address}}</td>
+                    </tr>
+                    <tr>
+                        <td>Email:</td>
+                        <td>{{user.email}}</td>
+                    </tr>
+                    <tr>
+                        <td>Số điện thoại:</td>
+                        <td>{{user.phoneNumber}}</td>
+                    </tr>
+                    <tr>
+                        <td>Trạng thái:</td>
+                        <td>{{user.status_of_users.statusOfUserName}}</td>
+                    </tr>
+                </tbody>
+            </table>
+            <button class="btn btn-sm btn-primary">Khóa tài khoản</button>
+        </div>
+    </div>
+
+    <div class="row mt-4">
+        <h4>Danh sách các bài viết đã đăng:</h4>
+        <table class="table table-striped table-sm mt-3">
+            <thead>
+                <tr>
+                    <th>Mã bài đăng</th>
+                    <th>Loại bài viết</th>
+                    <th>Danh mục</th>
+                    <th>Ngày đăng</th>
+                    <th>Trạng thái bài đăng</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>BD00037</td>
+                    <td>Cần bán</td>
+                    <td>DM00001</td>
+                    <td>21-11-2019</td>
+                    <td>Đang rao</td>
+                </tr>
+                <tr>
+                    <td>BD00038</td>
+                    <td>Cần mua</td>
+                    <td>DM00002</td>
+                    <td>21-11-2018</td>
+                    <td>Chưa duyệt</td>
+                </tr>
+                <tr>
+                    <td>BD00039</td>
+                    <td>Cho thuê</td>
+                    <td>DM00002</td>
+                    <td>21-12-2019</td>
+                    <td>Đang rao</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
