--- a/src/app/components/post/post-list/post-list.component.html
+++ b/src/app/components/post/post-list/post-list.component.html
@@ -2,14 +2,9 @@
 <div class="container-fluid bg-warning d-flex justify-content-center" style="position: fixed; top: 0px;z-index: 200;">
     <div class="row px-3" style="height:45px;width: 1000px; max-width: 1000px;">
         <div class="col-3 d-flex align-items-center">
-<<<<<<< HEAD
-            <!-- <img (click)=backToListPost() src="https://static.chotot.com/storage/marketplace/nha_white_logo.png" style="height: 30px;"> -->
-            <img class="" (click)=backToListPost() src="/assets/img/logoCodegym.png" style="height: 50px;">
-=======
             <!-- <img (click)=backToListPost() src="https://static.chotot.com/storage/marketplace/nha_white_logo.png"
                 style="height: 30px;"> -->
             <img class="pb-1" (click)=backToListPost() src="/assets/img/logoCodegym.png" style="height: 50px;">
->>>>>>> 32385fef695fa68cd0cfdae3ae0be76505c94ccf
         </div>
         <div class="col-9 d-flex justify-content-end">
             <div class="h-100 d-flex align-items-center mr-3">
@@ -150,12 +145,9 @@
                 <div *ngFor="let post of posts | paginate: { itemsPerPage: 5, currentPage: p }" class="card mb-2" style="width: 100%">
                     <div class="row no-gutters">
                         <div class="col-md-4">
-<<<<<<< HEAD
-                            <img src="assets/imageFolderOfProject/{{post.imageFolderName}}/image1.png" class="card-img" alt="..." height="130px" routerLink="/detailpost/{{post.id}}">
-=======
-                            <img src="assets/imageFolderOfProject/{{post.imageFolderName}}/image1.png" class="card-img"
-                                alt="..." height="130px" routerLink="/detailpost/{{post.id}}">
->>>>>>> 32385fef695fa68cd0cfdae3ae0be76505c94ccf
+                            <<<<<<< HEAD <img src="assets/imageFolderOfProject/{{post.imageFolderName}}/image1.png" class="card-img" alt="..." height="130px" routerLink="/detailpost/{{post.id}}">
+                                =======
+                                <img src="assets/imageFolderOfProject/{{post.imageFolderName}}/image1.png" class="card-img" alt="..." height="130px" routerLink="/detailpost/{{post.id}}"> >>>>>>> 32385fef695fa68cd0cfdae3ae0be76505c94ccf
                         </div>
                         <div class="col-md-8">
                             <div class="card-body h-100 d-flex flex-column justify-content-between py-2">
