--- a/src/app/components/login/login-users/login-users.component.html
+++ b/src/app/components/login/login-users/login-users.component.html
@@ -18,14 +18,16 @@
                 <input type="password"  class="form-control" formControlName="password">
             </div>
         </div>
-
+<div>
         <p class="container text-center" style="color: red;">{{dataLogin}}</p>
+    </div>
         <div id="checkbox" class="mt-3">
             <input type="checkbox"> Nhớ tài khoản
         </div>
         <div id="login-submit" class="mt-3">
             <button type="submit">Đăng nhập</button>
         </div>
+      
     </form>
         <div  id="sigin">
             <p>Đăng ký ngay <a [routerLink]="['/register']" routerLinkActive="router-link-active" >tại đây! </a></p>
