update page profile user, edit post

--- a/src/app/components/post/post-list/post-list.component.html
+++ b/src/app/components/post/post-list/post-list.component.html
@@ -145,9 +145,7 @@
                 <div *ngFor="let post of posts | paginate: { itemsPerPage: 5, currentPage: p }" class="card mb-2" style="width: 100%">
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                            <<<<<<< HEAD <img src="assets/imageFolderOfProject/{{post.imageFolderName}}/image1.png" class="card-img" alt="..." height="130px" routerLink="/detailpost/{{post.id}}">
-                                =======
-                                <img src="assets/imageFolderOfProject/{{post.imageFolderName}}/image1.png" class="card-img" alt="..." height="130px" routerLink="/detailpost/{{post.id}}"> >>>>>>> 32385fef695fa68cd0cfdae3ae0be76505c94ccf
+                            <img src="assets/imageFolderOfProject/{{post.imageFolderName}}/image1.png" class="card-img" alt="..." height="130px" routerLink="/detailpost/{{post.id}}">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body h-100 d-flex flex-column justify-content-between py-2">
