--- a/src/app/components/post/post-success/post-success.component.html
+++ b/src/app/components/post/post-success/post-success.component.html
@@ -8,7 +8,16 @@
         <p class="card-text">Chúng tôi sẽ duyệt bài viết của bạn trong tời gian sớm nhất</p>
         <p class="card-text">Chân thành cảm ơn !</p>
     </div>
-    <div class="">
-        <button [routerLink]="['/post/list']" routerLinkActive="router-link-active" type="button" class="btn btn-warning float-right m-4">Quay Lại Trang chủ</button>
+    <div class="text-center">
+        <span class="spinner-grow spinner-grow-sm text-primary"></span>
+        <span class="spinner-grow spinner-grow-sm text-primary"></span>
+        <span class="spinner-grow spinner-grow-sm text-primary"></span>
+        <span class="spinner-grow spinner-grow-sm text-primary"></span>
+        <span class="spinner-grow spinner-grow-sm text-primary"></span>
+    </div>
+
+    <div class="d-flex m-3">
+        <!-- <button [routerLink]="['/post/list']" routerLinkActive="router-link-active" type="button" class="btn btn-sm btn-secondary ">Trang chủ</button> -->
+        <a href="user/profile" class="btn btn-sm btn-success ml-auto"> Chuyển đến trang cá nhân</a>
     </div>
 </div>
