--- a/src/app/components/admin/admin-user-list/admin-user-list.component.html
+++ b/src/app/components/admin/admin-user-list/admin-user-list.component.html
@@ -8,7 +8,7 @@
         <h6>Tổng cộng: 29 thành viên</h6>
 
         <div class="d-flex">
-            <input type="text" class="form-control form-control-sm mr-3" style="width: 200px;">
+            <input [(ngModel)]="term" type="text" class="form-control form-control-sm mr-3" style="width: 200px;">
             <button class="btn btn-sm btn-success">Tìm kiếm</button>
         </div>
     </div>
@@ -25,7 +25,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let user of users">
+                <tr *ngFor="let user of users | filter:term | paginate: { itemsPerPage: 5, currentPage: p }">
                     <td>{{user.email}}</td>
                     <td>{{user.fullName}}</td>
                     <td>{{user.address}}</td>
@@ -35,5 +35,9 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+
+    <div class="row d-flex justify-content-end my-3">
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
     </div>
 </div>
