--- a/src/app/components/post/post-list/post-list.component.html
+++ b/src/app/components/post/post-list/post-list.component.html
@@ -4,7 +4,7 @@
         <div class="col-3 d-flex align-items-center">
             <!-- <img (click)=backToListPost() src="https://static.chotot.com/storage/marketplace/nha_white_logo.png"
                 style="height: 30px;"> -->
-            <img class="pb-1" (click)=backToListPost() src="/assets/img/logoCodegym.png" style="height: 50px;">
+            <img class="" (click)=backToListPost() src="/assets/img/logoCodegym.png" style="height: 40px;">
         </div>
         <div class="col-9 d-flex justify-content-end">
             <div class="h-100 d-flex align-items-center mr-3">
