--- a/src/app/components/admin/admin-user-detail/admin-user-detail.component.html
+++ b/src/app/components/admin/admin-user-detail/admin-user-detail.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
-        <i class="fas fa-users-cog text-dark mr-2" style="font-size: 30px;"></i>
-        <h3>Thông tin thành viên</h3>
+        <i class="fas fa-users-cog text-dark mr-2" style="font-size: 25px;"></i>
+        <h4>Thông tin thành viên</h4>
     </div>
     <hr>
     <div class="row">
@@ -33,7 +33,11 @@
                     </tr>
                 </tbody>
             </table>
-            <button class="btn btn-sm btn-primary">Khóa tài khoản</button>
+            <button *ngIf="user.statusOfUserId==1 || user.statusOfUserId==3" class="btn btn-sm btn-danger"
+                (click)="openDialog()">Khóa tài
+                khoản</button>
+            <button *ngIf="user.statusOfUserId==2" class="btn btn-sm btn-primary" (click)="openDialog2()">Bỏ khóa
+                tài khoản</button>
         </div>
     </div>
 
@@ -50,28 +54,18 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>BD00037</td>
-                    <td>Cần bán</td>
-                    <td>DM00001</td>
-                    <td>21-11-2019</td>
-                    <td>Đang rao</td>
-                </tr>
-                <tr>
-                    <td>BD00038</td>
-                    <td>Cần mua</td>
-                    <td>DM00002</td>
-                    <td>21-11-2018</td>
-                    <td>Chưa duyệt</td>
-                </tr>
-                <tr>
-                    <td>BD00039</td>
-                    <td>Cho thuê</td>
-                    <td>DM00002</td>
-                    <td>21-12-2019</td>
-                    <td>Đang rao</td>
+                <tr *ngFor="let post of posts | paginate: { itemsPerPage: 10, currentPage: p }">
+                    <td> <span class="ml-3">{{post.id}}</span> </td>
+                    <td>{{post.post_of_types.postOfTypeName}}</td>
+                    <td>{{post.categories.categoryName}}</td>
+                    <td>{{post.created_at | date: 'dd/MM/yyyy'}}</td>
+                    <td>{{post.post_availability_status.availability_status}}</td>
                 </tr>
             </tbody>
         </table>
+    </div>
+
+    <div class="row d-flex justify-content-end my-3">
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
     </div>
 </div>
