--- a/src/app/components/post/post-list/post-list.component.html
+++ b/src/app/components/post/post-list/post-list.component.html
@@ -1,45 +1,3 @@
-<!-- *********** Start Menu Bar ************ -->
-<div class="container-fluid bg-warning d-flex justify-content-center" style="position: fixed; top: 0px;z-index: 200;">
-    <div class="row px-3" style="height:45px;width: 1000px; max-width: 1000px;">
-        <div class="col-3 d-flex align-items-center">
-            <!-- <img (click)=backToListPost() src="https://static.chotot.com/storage/marketplace/nha_white_logo.png"
-                style="height: 30px;"> -->
-            <img class="" (click)=backToListPost() src="/assets/img/logoCodegym.png" style="height: 40px;">
-        </div>
-        <div class="col-9 d-flex justify-content-end">
-            <div class="h-100 d-flex align-items-center mr-3">
-                <i class="fas fa-search mr-1" style="font-size: 20px;"></i><span style="font-size: 16px;">Tìm rao
-                    vặt</span>
-            </div>
-            <div class="h-100 d-flex align-items-center mr-3">
-                <i class="far fa-bell mr-1" style="font-size: 20px;"></i><span style="font-size: 16px;">Thông
-                    báo</span>
-            </div>
-            <div class="h-100 d-flex align-items-center mr-3">
-                <i class="far fa-comments mr-1" style="font-size: 20px;"></i><span style="font-size: 16px;">Chat</span>
-            </div>
-            <div class="h-100 d-flex align-items-center mr-3">
-                <i class="fas fa-user-circle mr-1" style="font-size: 20px;"></i><span style="font-size: 16px;">Tôi
-                    bán</span>
-            </div>
-            <div class="h-100 d-flex align-items-center mr-3">
-                <i class="fas fa-ellipsis-h mr-1" style="font-size: 25px;"></i><span style="font-size: 16px;">
-                    Thêm</span>
-            </div>
-            <div class="h-100 d-flex align-items-center">
-                <button [routerLink]="['/post/add']" routerLinkActive="router-link-active" class="btn btn-sm font-weight-bold" style="background-color: #fc9807;"><span
-                        style="color: white; font-size: 12px;">ĐĂNG
-                        TIN</span></button>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- *********** End Menu Bar ************ -->
-
-
-
-
-
 <!-- ************ Start Search Box ************ -->
 <div class="container-fluid mt-5 d-flex justify-content-center" style="background-color:#f4f4f4;">
     <div class="row bg-white px-4" style="width: 1000px; max-width: 1000px;">
@@ -55,7 +13,8 @@
                 <form [formGroup]="formSearchPostBasic" (ngSubmit)="onClickSearchBasic()">
                     <div class="d-flex justify-content-between">
                         <div style="width: 40%;">
-                            <input type="text" placeholder="Nhập Tiêu đề hoặc nội dung cần tìm kiếm" class="form-control" formControlName="wordSearch">
+                            <input type="text" placeholder="Nhập Tiêu đề hoặc nội dung cần tìm kiếm"
+                                class="form-control" formControlName="wordSearch">
                         </div>
                         <div style="width: 28%;">
                             <select class="form-control" formControlName="region">
@@ -82,7 +41,9 @@
                             <option value="">Diện tích tổng</option>
                         </select>
                         <!-- *********** Bắt Đầu Tìm Kiếm Nâng Cao ********* -->
-                        <button (click)=" openDialog()" class="btn btn-outline-secondary btn-sm d-flex justify-content-around" style="width: 20%;"><span class="text-dark" style="font-size: 15px;">Lọc
+                        <button (click)=" openDialog()"
+                            class="btn btn-outline-secondary btn-sm d-flex justify-content-around"
+                            style="width: 20%;"><span class="text-dark" style="font-size: 15px;">Lọc
                                 nâng cao</span><i class="fas fa-filter mt-1" style="font-size: 20px;"></i></button>
                         <!-- ********** Kết Thúc Tìm Kiếm Nâng Cao ********** -->
 
@@ -142,10 +103,12 @@
                 </div>
 
 
-                <div *ngFor="let post of posts | paginate: { itemsPerPage: 5, currentPage: p }" class="card mb-2" style="width: 100%">
+                <div *ngFor="let post of posts | paginate: { itemsPerPage: 5, currentPage: p }" class="card mb-2"
+                    style="width: 100%">
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                            <img src="assets/imageFolderOfProject/{{post.imageFolderName}}/image1.png" class="card-img" alt="..." height="130px" routerLink="/detailpost/{{post.id}}">
+                            <img src="assets/imageFolderOfProject/{{post.imageFolderName}}/image1.png" class="card-img"
+                                alt="..." height="130px" routerLink="/detailpost/{{post.id}}">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body h-100 d-flex flex-column justify-content-between py-2">
@@ -243,74 +206,3 @@
     </div>
 </div>
 <!-- ************ End Body (List post and sidebar) ************ -->
-
-
-
-
-
-
-
-
-<!-- ****************** Start Footer *********************** -->
-<div class="container-fluid py-5" style="background-color:#dbdbdb;">
-    <div class="row d-flex justify-content-around mx-auto" style="width: 1000px; max-width: 1000px;">
-        <div class="col-2">
-            <div>
-                <p class="font-weight-bold">Liên Kết</p>
-            </div>
-
-            <div class="d-flex align-items-center">
-                <i class="fab fa-facebook-square" style="font-size: 25px;"></i>
-                <span class="ml-2">Facebook</span>
-            </div>
-            <div class="d-flex align-items-center">
-                <i class="fab fa-google-plus-g" style="font-size: 25px;"></i>
-                <span class="ml-2">Google+</span>
-            </div>
-            <div class="d-flex align-items-center">
-                <i class="fab fa-youtube" style="font-size: 25px;"></i>
-                <span class="ml-2">Youtube</span>
-            </div>
-        </div>
-
-        <div class="col-2">
-            <p class="font-weight-bold">Bản di động</p>
-            <img class="mb-2" src="https://static.chotot.com/storage/marketplace/ios-logo.svg" alt="" height="32px">
-            <img src="https://static.chotot.com/storage/marketplace/gg-play.svg" alt="" height="32px">
-        </div>
-
-        <div class="col-3">
-            <p class="font-weight-bold mb-2">Hỗ trợ khách hàng</p>
-            <p class="my-0 py-0">Trung tâm trợ giúp</p>
-            <p class="my-0 py-0">An toàn mua bán</p>
-            <p class="my-0 py-0">Quy định cần biết</p>
-            <p class="my-0 py-0">Liên hệ hỗ trợ</p>
-        </div>
-
-        <div class="col-2">
-            <p class="font-weight-bold mb-2">Về CodeGym</p>
-            <p class="my-0 py-0">Giới thiệu</p>
-            <p class="my-0 py-0">Tuyển dụng</p>
-            <p class="my-0 py-0">Truyền thông</p>
-            <p class="my-0 py-0">Blog</p>
-        </div>
-
-        <div class="col-2">
-            <p class="font-weight-bold mb-2">Chứng nhận</p>
-            <img src="https://static.chotot.com/storage/marketplace/cerfiticate.png" alt="" height="38px">
-        </div>
-    </div>
-
-
-
-    <div class="row mx-auto mt-4 text-center d-flex justify-content-center" style="width: 1000px; max-width: 1000px;">
-        <p class="text-center" style="font-size: 13px;">
-            Công ty Đào tạo lập trình CodeGym - Địa chỉ: Tầng 10 ,Số 295 Nguyễn Tất Thành , Phường Thanh Bình, Đà Nẵng, 550000. <br>
-            <span>Giấy chứng nhận đăng ký doanh nghiệp số 0312120782 do Sở Kế Hoạch và Đầu Tư TP Đà Nẵng cấp ngày
-                11/01/2013</span>
-            <br>
-            <span>Email: trogiup@chotot.vn - Đường dây nóng: (084)364452261</span>
-        </p>
-    </div>
-</div>
-<!-- ****************** End Footer *********************** -->
